Comienzo de archivos a testear

--- a/env/.local.env
+++ b/env/.local.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb://localhost:27017/auth-service-local
-HOST=http://localhost
+MONGO_URI=mongodb://127.0.0.1:27017/auth-service-local
+HOST=http://127.0.0.1
 PORT=3000
