--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"@babel/preset-env": "^7.22.2",
 		"babel-jest": "^29.5.0",
 		"chai": "^4.3.7",
+		"mocha": "^10.2.0",
 		"jest": "^29.5.0",
 		"nodemon": "^2.0.20",
 		"sinon": "^15.1.0",
