--- a/env/.local.env
+++ b/env/.local.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb://localhost:27017/auth-service-local
+MONGO_URI="mongodb://127.0.0.1:27017/auth-service-local?readPreference=primary&ssl=false&directConnection=true"
 HOST=http://localhost
 PORT=3000
